--- a/ui_lovelace_minimalist/dashboard/views/rooms/living-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/living-room.yaml
@@ -47,16 +47,10 @@ cards:
         template: card_light
         entity: switch.living_room_switch_switch_1
 
-  - type: "custom:button-card"
-    template:
-      - card_cover
-      - battery_info
-    entity: cover.living_room_blinds
+  - type: custom:decluttering-card
+    template: cover
     variables:
-      ulm_card_cover_enable_controls: true
-      ulm_card_cover_enable_slider: true
-      ulm_card_cover_color: green
-      ulm_battery_entity: sensor.living_room_blinds_battery
+      - sensor_prefix: living_room
 
   - type: "custom:button-card"
     template: card_thermostat
