--- a/ui_lovelace_minimalist/dashboard/views/network.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/network.yaml
@@ -26,6 +26,18 @@ cards:
       ulm_custom_card_speedtest_ping_entity: sensor.speedtest_ping
       ulm_custom_card_speedtest_round: true
 
+  - type: "custom:button-card"
+    template: card_title
+    label: WiFi Strength
+
+  - type: custom:auto-entities
+    card:
+      type: entities
+    filter:
+      include:
+        - attributes:
+            device_class: signal_strength
+
   - type: "custom:anchor-card"
     anchor_id: disconnected
     offset: -60
