--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
@@ -15,16 +15,10 @@ cards:
     template: card_light
     entity: switch.gina_computer_socket_1
 
-  - type: "custom:button-card"
-    template:
-      - card_cover
-      - battery_info
-    entity: cover.guest_bedroom_blinds
+  - type: custom:decluttering-card
+    template: cover
     variables:
-      ulm_card_cover_enable_controls: true
-      ulm_card_cover_enable_slider: true
-      ulm_card_cover_color: green
-      ulm_battery_entity: sensor.guest_bedroom_blinds_battery
+      - sensor_prefix: guest_bedroom
 
   - type: custom:decluttering-card
     template: z_wave_climate
