--- a/ui_lovelace_minimalist/dashboard/views/rooms/kitchen.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/kitchen.yaml
@@ -119,16 +119,10 @@ cards:
               color: pink
               name: Tokyo
 
-  - type: "custom:button-card"
-    template:
-      - card_cover
-      - battery_info
-    entity: cover.kitchen_blinds
+  - type: custom:decluttering-card
+    template: cover
     variables:
-      ulm_card_cover_enable_controls: true
-      ulm_card_cover_enable_slider: true
-      ulm_card_cover_color: green
-      ulm_battery_entity: sensor.kitchen_blinds_battery
+      - sensor_prefix: kitchen
 
   - type: custom:decluttering-card
     template: z_wave_climate
