--- a/ui_lovelace_minimalist/dashboard/views/rooms/master-bedroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/master-bedroom.yaml
@@ -23,16 +23,10 @@ cards:
         template: card_light
         entity: switch.bedroom_switch_switch_1
 
-  - type: "custom:button-card"
-    template:
-      - card_cover
-      - battery_info
-    entity: cover.bedroom_blinds
+  - type: custom:decluttering-card
+    template: cover
     variables:
-      ulm_card_cover_enable_controls: true
-      ulm_card_cover_enable_slider: true
-      ulm_card_cover_color: green
-      ulm_battery_entity: sensor.bedroom_blinds_battery
+      - sensor_prefix: bedroom
 
   - type: custom:decluttering-card
     template: z_wave_climate
