--- a/automations/devices/xbox-tv-on.yaml
+++ b/automations/devices/xbox-tv-on.yaml
@@ -1,18 +1,18 @@
 #####
-# Xbox turns off TV
+# Xbox turns on TV
 #####
 
-alias: Turn off TV when Xbox turned off
-id: e85e41ea-5ff3-42ae-b5f3-5b6c0cfcccf6
+alias: Turn on TV when Xbox turned on
+id: 018ed639-c8e6-4899-854d-2930d40e09e3
 
 trigger:
 - platform: device
   device_id: 4af44e03559bc018ab379a45f5037e39
   domain: media_player
   entity_id: 2578a87c64d2af515841f9dc31a3ab52
-  type: turned_off
+  type: turned_on
 
 action:
-- service: media_player.turn_off
+- service: media_player.turn_on
   target:
     device_id: 1df0518e60999f55fe1e6d35b0afd607
