tweak some automations

--- a/automations/switches/bathroom_fan_humidity_stop.yaml
+++ b/automations/switches/bathroom_fan_humidity_stop.yaml
@@ -1,5 +1,5 @@
 #####
-# Simple automation to stop fan if bathroom humidity is under 60%
+# Simple automation to stop fan if bathroom humidity is under 65%
 #
 #####
 
@@ -24,7 +24,7 @@ condition:
     entity_id: binary_sensor.people_home
     state: 'on'
   - condition: state
-    entity_id: switch.master_bath_switches
+    entity_id: switch.master_bath_switches_2
     state: 'off'
     
 action:
