--- a/automations/switches/master_bath_fan_control.yaml
+++ b/automations/switches/master_bath_fan_control.yaml
@@ -26,14 +26,29 @@ action:
     - condition: trigger
       id:
       - fan-off
+    - condition: numeric_state
+      entity_id: sensor.master_bath_climate_humidity
+      above: 64
     sequence:
     - type: turn_off
       device_id: e3d6ecef0926d1a385c264ccd7b93b66
-      entity_id: 87589a5e310bd9e2b9d6ddcf928fd151
+      entity_id: b2e971f6506f5eb52b6502c5f269bd62
       domain: switch
+  - conditions:
+    - condition: trigger
+      id:
+      - fan-off
+    - condition: numeric_state
+      entity_id: sensor.master_bath_climate_humidity
+      below: 65
+    sequence:
     - type: turn_off
       device_id: e3d6ecef0926d1a385c264ccd7b93b66
       entity_id: b2e971f6506f5eb52b6502c5f269bd62
+      domain: switch
+    - type: turn_off
+      device_id: e3d6ecef0926d1a385c264ccd7b93b66
+      entity_id: 87589a5e310bd9e2b9d6ddcf928fd151
       domain: switch
   - conditions:
     - condition: trigger
