--- a/automations/sensors/smoke-sensors.yaml
+++ b/automations/sensors/smoke-sensors.yaml
@@ -11,7 +11,8 @@ trigger:
   to: "on"
 
 action:
-  - service: notify.family
+  - service: script.notify_family
     data:
       message: 'Smoke/CO sensor triggered!'
       title: '🔥 Smoke/CO sensor triggered!'
+      tag: smoke_sensor
