--- a/automations/utilities/dryer_end.yaml
+++ b/automations/utilities/dryer_end.yaml
@@ -9,26 +9,19 @@ trigger:
   platform: numeric_state
   entity_id: sensor.dryer_1_1min
   below: 500
-  for: '00:05:00'
+  for: "00:05:00"
 
 condition:
   condition: state
   entity_id: input_boolean.dryer_on
-  state: 'on'
+  state: "on"
 
 action:
   - service: input_boolean.turn_off
     entity_id: input_boolean.dryer_on
 
-  - service: notify.family
+  - service: script.notify_family
     data:
       message: Empty me and the lint thingy!
       title: Dryer done!
-      data:
-        tag: dryer_done
-
-  - service: persistent_notification.create
-    data:
-      message: Empty me and the lint thingy!
-      title: Dryer done!
-      notification_id: dryer_done
+      tag: dryer_done
