--- a/automations/utilities/washing_machine_end.yaml
+++ b/automations/utilities/washing_machine_end.yaml
@@ -9,26 +9,19 @@ trigger:
   platform: numeric_state
   entity_id: sensor.clothes_washer_13_1min
   below: 2
-  for: '00:20:00' # handle pause in soak
+  for: "00:20:00" # handle pause in soak
 
 condition:
   condition: state
   entity_id: input_boolean.washing_machine_on
-  state: 'on'
+  state: "on"
 
 action:
-- service: input_boolean.turn_off
-  entity_id: input_boolean.washing_machine_on
+  - service: input_boolean.turn_off
+    entity_id: input_boolean.washing_machine_on
 
-- service: notify.family
-  data:
-    message: Time to load the dryer...
-    title: Washer done!
+  - service: script.notify_family
     data:
+      message: Time to load the dryer...
+      title: Washer done!
       tag: washer_done
-
-- service: persistent_notification.create
-  data:
-    message: Time to load the dryer...
-    title: Washer done!
-    notification_id: washer_done
