--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -346,6 +346,10 @@ cards:
                   entity_id: input_boolean.dryer_on
                   templates:
                     - blue_on
+                entity_4:
+                  entity_id: binary_sensor.dryer_door_sensor_window_door_is_open
+                  templates:
+                    - blue_on
 
             #################
             # ATTIC
