--- a/ui_lovelace_minimalist/dashboard/views/rooms/garage.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/garage.yaml
@@ -82,9 +82,17 @@ cards:
           ulm_card_input_boolean_force_background_color: true
       - type: "custom:button-card"
         template: card_input_boolean
-        entity: input_boolean.washing_machine_on
+        entity: binary_sensor.dryer_door_sensor_window_door_is_open
         variables:
           ulm_card_input_boolean_force_background_color: true
+          ulm_card_input_boolean_name: Dryer Door
+
+  - type: "custom:button-card"
+    template: card_input_boolean
+    entity: input_boolean.washing_machine_on
+    variables:
+      ulm_card_input_boolean_force_background_color: true
+      
 
   - type: horizontal-stack
     cards:
@@ -109,3 +117,9 @@ cards:
       ulm_card_graph_color: "var(--google-yellow)"
       ulm_card_graph_entity: sensor.water_heater_5_1min
       ulm_card_graph_name: Water Heater
+
+  - type: custom:decluttering-card
+    template: z_wave_door_sensor
+    variables:
+      - sensor_prefix: dryer
+      - node_number: 22
