--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -317,6 +317,10 @@ cards:
               icon: mdi:shower
               variables:
                 affix: guest_bath
+                entity_1:
+                  entity_id: binary_sensor.dryer_door_sensor_window_door_is_open
+                  templates:
+                    - blue_on
 
         - type: horizontal-stack
           cards:
