--- a/entities/templates/devices_offline.yaml
+++ b/entities/templates/devices_offline.yaml
@@ -2,6 +2,7 @@
 # Count devices that are offline
 # Domains to exclude
 #  - button
+#  - conversation
 #  - number
 #  - tts
 #  - stt
@@ -12,7 +13,7 @@
     unique_id: e9f2af25-7bab-4ad2-8cd0-47f2b3cae058
     icon: 'mdi:cloud-off-outline'
     state: "{{ states
-| rejectattr('domain','in',['button', 'tts', 'stt', 'number'])
+| rejectattr('domain','in',['button', 'tts', 'stt', 'number', 'conversation'])
 | selectattr('state','in', ['unknown', 'unavailable'])
 | rejectattr('entity_id','search', 'poat_rgb|mfc_7860|plex|seedbox|poat_pi|media_player.xbox')
 | rejectattr('entity_id','in', ['select.cat_noms_manual_feed', 'sensor.cat_noms_battery_status'])
