--- a/automations/cats/cat-device-issue.yaml
+++ b/automations/cats/cat-device-issue.yaml
@@ -9,26 +9,46 @@ trigger:
   - platform: state
     entity_id: group.cat_device_status
     to: "on"
-    for: "00:05:00"
+    for: "00:00:30"
+    id: cat-on
+  - platform: state
+    entity_id: group.cat_device_status
+    to: "off"
+    for: "00:00:30"
+    id: cat-off
 
 action:
-  - service: script.notify_family
-    data:
-      message: >
-        Cat device has an issue!
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - cat-off
+      sequence:
+        - service: script.clear_notification
+          data:
+            tag: cat_issue
+    - conditions:
+      - condition: trigger
+        id:
+        - cat-on
+      sequence:
+        - service: script.notify_family
+          data:
+            message: >
+              Cat device has an issue!
 
 
-        Water Level:          {{ states("binary_sensor.pet_thirst_water_level") }}
+              Water Level:          {{ states("binary_sensor.pet_thirst_water_level") }}
 
-        Water Filter:         {{ states("binary_sensor.cat_filter_problem") }}
+              Water Filter:         {{ states("binary_sensor.cat_filter_problem") }}
 
 
-        Marbles Food Level:   {{ states("binary_sensor.cat_noms_food_level") }}
+              Marbles Food Level:   {{ states("binary_sensor.cat_noms_food_level") }}
 
-        Marbles Food Battery: {{ states("binary_sensor.cat_battery_problem") }}
+              Marbles Food Battery: {{ states("binary_sensor.cat_battery_problem") }}
 
-        Marbles Desicant:     {{ states("binary_sensor.cat_desicant_problem") }}
+              Marbles Desicant:     {{ states("binary_sensor.cat_desicant_problem") }}
 
-        Marbles Food Status:  {{ states("binary_sensor.cat_noms_status_problem") }}
-      title: "🐱 Cat device problem!"
-      tag: cat_issue
+              Marbles Food Status:  {{ states("binary_sensor.cat_noms_status_problem") }}
+            title: "🐱 Cat device problem!"
+            tag: cat_issue
