--- a/automations/systems/alert_to_persistent.yaml
+++ b/automations/systems/alert_to_persistent.yaml
@@ -8,35 +8,64 @@ id: 72676c87-8c72-4c0e-98e2-a5562a65dec9
 
 trigger:
   - platform: event
-    id: create 
+    id: create
     event_type: call_service
     event_data:
       domain: notify
       service: family
+
   - platform: event
-    id: dismiss 
+    id: create-ai
     event_type: call_service
     event_data:
       domain: notify
-      service: family
-      service_data:
-        message: clear_notification
+      service: family_ai
 
 action:
   - choose:
-    - conditions:
-      - condition: trigger
-        id: create
-      sequence:
-        - service: persistent_notification.create
-          data:
-            message: "{{ trigger.event.data.service_data.message }}"
-            title: "{{ trigger.event.data.service_data.title }}"
-            notification_id: "{{ trigger.event.data.service_data.tag }}"
-    - conditions:
-      - condition: trigger
-        id: dismiss
-      sequence:
-        - service: persistent_notification.dismiss
-          data:
-            notification_id: "{{ trigger.event.data.service_data.tag }}"
+      - conditions:
+          - condition: trigger
+            id: create
+          - not: "{{ trigger.event.data.service_data.message == 'clear_notification' }}"
+        sequence:
+          - service: persistent_notification.create
+            data:
+              message: "{{ trigger.event.data.service_data.message }}"
+              title: "{{ trigger.event.data.service_data.title }}"
+              notification_id: "{{ trigger.event.data.service_data.data.tag }}"
+
+      - conditions:
+          - condition: trigger
+            id: create-ai
+          - not: "{{ trigger.event.data.service_data.message == 'clear_notification' }}"
+        sequence:
+          - service: google_generative_ai_conversation.generate_content
+            data:
+              prompt: "Briefly tell me that my {{ trigger.event.data.service_data.message }} in a country accent"
+            response_variable: generated_content
+          - service: notify.family
+            data:
+              message: "{{ generated_content['text'] }}"
+              title: "{{ trigger.event.data.service_data.title }}"
+              data:
+                tag: "{{ trigger.event.data.service_data.data.tag }}"
+
+      - conditions:
+          - condition: trigger
+            id: create-ai
+          - "{{ trigger.event.data.service_data.message == 'clear_notification' }}"
+        sequence:
+          - service: notify.family
+            data:
+              message: clear_notification
+              data:
+                tag: "{{ trigger.event.data.service_data.data.tag }}"
+
+      - conditions:
+          - "{{ trigger.event.data.service_data.message == 'clear_notification' }}"
+        sequence:
+          - service: persistent_notification.dismiss
+            data:
+              notification_id: "{{ trigger.event.data.service_data.data.tag }}"
+
+mode: queued
