--- a/entities/alerts/dryer.yaml
+++ b/entities/alerts/dryer.yaml
@@ -6,12 +6,13 @@
 dryer:
   name: Dryer done
   entity_id: input_boolean.dryer_on
-  title: 🧦Dryer done!
-  message: dryer is done
+  title: 🧦 Dryer done!
+  message: false
   done_message: clear_notification
   state: "off"
   repeat: 30
   data:
     tag: dryer_done
+    prompt: dryer is done
   notifiers:
     - family_ai
