--- a/entities/alerts/cats.yaml
+++ b/entities/alerts/cats.yaml
@@ -8,9 +8,6 @@ cats:
   entity_id: group.cat_device_status
   title: 🐱 Cat device problem!
   message: >
-    Cat device has an issue!
-
-
     Water Level:          {{ states("binary_sensor.pet_thirst_water_level") }}
 
     Water Filter:         {{ states("binary_sensor.cat_filter_problem") }}
@@ -28,5 +25,6 @@ cats:
   repeat: 10
   data:
     tag: cat_issue
+    prompt: cat's feeder has an issue
   notifiers:
-    - family
+    - family_ai
