--- a/ui_lovelace_minimalist/custom_cards/templates/chips/chip_icon_state_if_value.yaml
+++ b/ui_lovelace_minimalist/custom_cards/templates/chips/chip_icon_state_if_value.yaml
@@ -6,11 +6,12 @@ chip_icon_state_if_value:
   styles:
     icon:
       - color: >
-          [[[ if (entity.state > 0 || entity.state == 'on') 
+          [[[ if (entity.state > 0 || entity.state == variables.on_state) 
                 return "var(--red-color)" ;
               else return "var(--green-color)"; ]]]
   variables:
     ulm_chip_mdi_icon_state_entity: "[[[ return variables.entity; ]]]"
+    on_state: "on"
   tap_action:
     action: "[[[ if (variables.navigation_path) return 'navigate'; else return 'more-info'; ]]]"
     navigation_path: "[[[ return variables.navigation_path; ]]]"
