--- a/entities/binary_sensors/vacuum_errors.yaml
+++ b/entities/binary_sensors/vacuum_errors.yaml
@@ -7,11 +7,11 @@ platform: template
 sensors:
   strong_boi_error:
     friendly_name: "Strong Boi Problem"
-    value_template: "{{ is_state('vacuum.e0000693817603917196', 'error') }}"
+    value_template: "{{ is_state('vacuum.strongboi', 'error') }}"
     unique_id: c6a6b37d-02f0-451d-9095-da10222a6a94
     device_class: problem
     icon_template: >
-      mdi:robot-vacuum{{'-alert' if is_state('vacuum.e0000693817603917196', 'error')}}
+      mdi:robot-vacuum{{'-alert' if is_state('vacuum.strongboi', 'error')}}
 
   rolo_error:
     friendly_name: "Rolo Problem"
